tests/specs/class_declaration.txt
# mod.ts
export class Class {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

class Class



# output.json
[
  {
    "name": "Class",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 1,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "class",
        "def": {
          "isAbstract": false,
          "constructors": [],
          "properties": [],
          "indexSignatures": [],
          "methods": [],
          "extends": null,
          "implements": [],
          "typeParams": [],
          "superTypeParams": []
        }
      }
    ]
  }
]
